# sampic_daq

./: .gitignore  CMakeLists.txt  README.md  frontend.cpp
include/config_structs/: sampic_config.h
include/integration/midas/: frontend_config.h
include/integration/sampic/: sampic_board_configurator.h  sampic_channel_configurator.h  sampic_chip_configurator.h  sampic_config.h  sampic_configurator.h  sampic_crate_configurator.h  sampic_hardware.h
include/integration/spdlog/: logger_config.h  logger_configurator.h
include/odb/: odb_manager.h
resources/calib/: crate_connect.txt.url  logfile.txt
resources/calib/ADC_IRamp_Files/: ADC_IRamp_Calib_Board_TG_V2.2_feIndex_0_FreqEch_4252_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_0_FreqEch_8512_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_1_FreqEch_1600_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_1_FreqEch_3200_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_1_FreqEch_4252_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_1_FreqEch_6400_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_1_FreqEch_8512_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_2_FreqEch_1600_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_2_FreqEch_4252_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_2_FreqEch_6400_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_2_FreqEch_8512_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_3_FreqEch_1600_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_3_FreqEch_2133_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_3_FreqEch_3200_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.2_feIndex_3_FreqEch_6400_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_0_FreqEch_1600_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_0_FreqEch_3200_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_0_FreqEch_4252_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_0_FreqEch_6400_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_0_FreqEch_8512_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_1_FreqEch_3200_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_1_FreqEch_4252_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_1_FreqEch_6400_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_1_FreqEch_8512_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_2_FreqEch_3200_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_2_FreqEch_4252_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_2_FreqEch_6400_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_3_FreqEch_1600_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_3_FreqEch_3200_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_3_FreqEch_4252_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_3_FreqEch_6400_MS_s.txt  ADC_IRamp_Calib_Board_TG_V2.3_feIndex_3_FreqEch_8512_MS_s.txt
resources/calib/ADC_Linearity_Files/: ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch0.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch1.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch10.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch11.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch12.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch13.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch14.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch15.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch16.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch17.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch18.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch19.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch2.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch20.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch21.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch22.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch23.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch24.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch25.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch26.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch27.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch28.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch29.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch3.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch30.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch31.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch32.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch33.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch34.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch35.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch36.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch37.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch38.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch39.txt  ADC_Linearity_Calib_Board_TG_V2.2_FreqEch_1600_MS_s_ADCNbOfBits11_Ch4.txt  (+733 more)
scripts/: build.sh  cleanup.sh  run.sh  screen_frontend.sh  start_frontend.sh  stop_frontend_screen.sh
scripts/data_management/: delete_data.sh  experiment_dir.txt  find_data_dir.sh
scripts/environment_setup/: clear_environment.sh  detect_environment.sh  environment_variables.txt  setup_environment.sh
scripts/screening/: screen_frontend.sh  stop_frontend_screen.sh
scripts/tools/sampic_default_settings_generator/: CMakeLists.txt
scripts/tools/sampic_default_settings_generator/scripts/: run.sh
scripts/tools/sampic_default_settings_generator/src/: main.cpp
scripts/webpage_scripts/: screen_names.txt  start_midas_webpage.sh  stop_midas_webpage.sh
src/: frontend.cpp
src/odb/: odb_manager.cpp
(+1627 files in other folders)
